#278 - standard about translation keys

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -104,27 +104,27 @@ abort_transfer.name=Transfer abbrechen
 about.description=Zeigt Informationen \u00fcber PowerFolder an
 about.dialog.check_for_updates=Updates suchen
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Mitarbeiter
-about.dialog.documentation=Dokumentation
-about.dialog.general_information=Allgemeine Information
-about.dialog.home_page=Homepage
-about.dialog.power_folder.build_date=Build datum\: {0}
-about.dialog.power_folder.build_time=Build Zeit\: {0}
-about.dialog.power_folder.max=Speicher (max)\: {0}MB
-about.dialog.power_folder.text=Version\: {0}
-about.dialog.power_folder.used=Speicher (benutzt)\: {0}MB
+about_dialog.contributers=Mitarbeiter
+about_dialog.documentation=Dokumentation
+about_dialog.general_information=Allgemeine Information
+about_dialog.home_page=Homepage
+about_dialog.power_folder.build_date=Build datum\: {0}
+about_dialog.power_folder.build_time=Build Zeit\: {0}
+about_dialog.power_folder.max=Speicher (max)\: {0}MB
+about_dialog.power_folder.text=Version\: {0}
+about_dialog.power_folder.used=Speicher (benutzt)\: {0}MB
 about.dialog.send_bug_report=Fehler melden
 about.dialog.send_bug_report.key=F
-about.dialog.support=Support
-about.dialog.sync_your_world=Sync your World
-about.dialog.team=Team
+about_dialog.support=Support
+about_dialog.sync_your_world=Sync your World
+about_dialog.team=Team
 about.dialog.testers=Tester
-about.dialog.title=\u00dcber PowerFolder
-about.dialog.translators=\u00dcbersetzer
-about.dialog.your_system.java_version=Java Version\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Aufl\u00f6sung\: {0}x{1}
-about.dialog.your_system.title=Ihr System
+about_dialog.title=\u00dcber PowerFolder
+about_dialog.translators=\u00dcbersetzer
+about_dialog.your_system.java_version=Java Version\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Aufl\u00f6sung\: {0}x{1}
+about_dialog.your_system.title=Ihr System
 about.dialog_about_tab=\u00fcber
 about.dialog_contributers_tab=team
 
