--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Anular transferencia(s)
 about.description=Muestra informaci\u00F3n acerca de PowerFolder
 about.dialog.check_for_updates=Comprobar Actualizaciones
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Colaboladores
-about.dialog.documentation=Documentaci\u00F3n
-about.dialog.general_information=Informaci\u00F3n General
-about.dialog.home_page=P\u00E1gina de Inicio
-about.dialog.power_folder.build_date=Build date\: {0}
-about.dialog.power_folder.build_time=Build time\: {0}
-about.dialog.power_folder.max=M\u00E1ximo de memoria\: {0}MB
-about.dialog.power_folder.text=Versi\u00F3n\: {0}
-about.dialog.power_folder.used=Memoria usada\: {0}MB
+about_dialog.contributers=Colaboladores
+about_dialog.documentation=Documentaci\u00F3n
+about_dialog.general_information=Informaci\u00F3n General
+about_dialog.home_page=P\u00E1gina de Inicio
+about_dialog.power_folder.build_date=Build date\: {0}
+about_dialog.power_folder.build_time=Build time\: {0}
+about_dialog.power_folder.max=M\u00E1ximo de memoria\: {0}MB
+about_dialog.power_folder.text=Versi\u00F3n\: {0}
+about_dialog.power_folder.used=Memoria usada\: {0}MB
 about.dialog.send_bug_report=Enviar Reporte de Errores
 about.dialog.send_bug_report.key=B
-about.dialog.support=Soporte Tecnico
-about.dialog.sync_your_world=Syncroniza tu Mundo
-about.dialog.team=Equipo
+about_dialog.support=Soporte Tecnico
+about_dialog.sync_your_world=Syncroniza tu Mundo
+about_dialog.team=Equipo
 about.dialog.testers=Testers
-about.dialog.title=Acerca de PowerFolder
-about.dialog.translators=Traductores
-about.dialog.your_system.java_version=Versi\u00F3n de Java\: {0}
-about.dialog.your_system.os=SO\: {0}
-about.dialog.your_system.screen=Resoluci\u00F3n de Pantalla\: {0}x{1}
-about.dialog.your_system.title=Su Sistema
+about_dialog.title=Acerca de PowerFolder
+about_dialog.translators=Traductores
+about_dialog.your_system.java_version=Versi\u00F3n de Java\: {0}
+about_dialog.your_system.os=SO\: {0}
+about_dialog.your_system.screen=Resoluci\u00F3n de Pantalla\: {0}x{1}
+about_dialog.your_system.title=Su Sistema
 about.dialog_about_tab=acerca
 about.dialog_contributers_tab=equipo
 
