--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Abandonne le(s) transfert(s)
 about.description=Informations PowerFolder
 about.dialog.check_for_updates=V\u00E9rifier les mises \u00E0 jour
 about.dialog.check_for_updates.key=V
-about.dialog.contributers=Contributeurs
-about.dialog.documentation=Documentation
-about.dialog.general_information=Informations Globales
-about.dialog.home_page=Page d'accueil
-about.dialog.power_folder.build_date=Build date\: {0}
-about.dialog.power_folder.build_time=Build time\: {0}
-about.dialog.power_folder.max=M\u00E9moire Max\: {0}Mo
-about.dialog.power_folder.text=Version\: {0}
-about.dialog.power_folder.used=M\u00E9moire utilis\u00E9e\: {0}Mo
+about_dialog.contributers=Contributeurs
+about_dialog.documentation=Documentation
+about_dialog.general_information=Informations Globales
+about_dialog.home_page=Page d'accueil
+about_dialog.power_folder.build_date=Build date\: {0}
+about_dialog.power_folder.build_time=Build time\: {0}
+about_dialog.power_folder.max=M\u00E9moire Max\: {0}Mo
+about_dialog.power_folder.text=Version\: {0}
+about_dialog.power_folder.used=M\u00E9moire utilis\u00E9e\: {0}Mo
 about.dialog.send_bug_report=Informer d'un bogue
 about.dialog.send_bug_report.key=B
-about.dialog.support=Support
-about.dialog.sync_your_world=Sync your World
-about.dialog.team=Equipe
+about_dialog.support=Support
+about_dialog.sync_your_world=Sync your World
+about_dialog.team=Equipe
 about.dialog.testers=Testeurs
-about.dialog.title=A propos de PowerFolder
-about.dialog.translators=Traducteurs
-about.dialog.your_system.java_version=Version Java\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Ecran\: {0}x{1}
-about.dialog.your_system.title=Votre Syst\u00E8me
+about_dialog.title=A propos de PowerFolder
+about_dialog.translators=Traducteurs
+about_dialog.your_system.java_version=Version Java\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Ecran\: {0}x{1}
+about_dialog.your_system.title=Votre Syst\u00E8me
 about.dialog_about_tab=A propos de
 about.dialog_contributers_tab=Equipe
 
