--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Interrompi il trasferimento(s)
 about.description=Mostra informazioni riguardo PowerFolder
 about.dialog.check_for_updates=Controlla gli aggiornamenti
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Collaboratori
-about.dialog.documentation=Documentazione
-about.dialog.general_information=Informazioni generali
-about.dialog.home_page=Homepage
-about.dialog.power_folder.build_date=Data di build\: {0}
-about.dialog.power_folder.build_time=Ora di build\: {0}
-about.dialog.power_folder.max=Memoria max.\: {0}MB
-about.dialog.power_folder.text=Versione\: {0}
-about.dialog.power_folder.used=Memoria utilizzata\: {0}MB
+about_dialog.contributers=Collaboratori
+about_dialog.documentation=Documentazione
+about_dialog.general_information=Informazioni generali
+about_dialog.home_page=Homepage
+about_dialog.power_folder.build_date=Data di build\: {0}
+about_dialog.power_folder.build_time=Ora di build\: {0}
+about_dialog.power_folder.max=Memoria max.\: {0}MB
+about_dialog.power_folder.text=Versione\: {0}
+about_dialog.power_folder.used=Memoria utilizzata\: {0}MB
 about.dialog.send_bug_report=Invia Report Errori
 about.dialog.send_bug_report.key=E
-about.dialog.support=Supporto
-about.dialog.sync_your_world=Sincronizza il tuo Mondo
-about.dialog.team=Team
+about_dialog.support=Supporto
+about_dialog.sync_your_world=Sincronizza il tuo Mondo
+about_dialog.team=Team
 about.dialog.testers=Testers
-about.dialog.title=About PowerFolder
-about.dialog.translators=Traduttori
-about.dialog.your_system.java_version=Versione di Java\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Schermo\: {0}x{1}
-about.dialog.your_system.title=Il tuo sistema
+about_dialog.title=About PowerFolder
+about_dialog.translators=Traduttori
+about_dialog.your_system.java_version=Versione di Java\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Schermo\: {0}x{1}
+about_dialog.your_system.title=Il tuo sistema
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 
