--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -34,27 +34,27 @@ abort_transfer.name=\u8EE2\u9001\u4E2D\u6B62(A)
 about.description=PowerFolder \u306B\u95A2\u3059\u308B\u60C5\u5831\u306E\u8868\u793A
 about.dialog.check_for_updates=\u66F4\u65B0\u7248\u30C1\u30A7\u30C3\u30AF(U)
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=\u5354\u529B
-about.dialog.documentation=\u4F7F\u7528\u8AAC\u660E
-about.dialog.general_information=\u5168\u822C\u60C5\u5831
-about.dialog.home_page=\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8
-about.dialog.power_folder.build_date=\u30D3\u30EB\u30C9 \u65E5\u4ED8\: {0}
-about.dialog.power_folder.build_time=\u30D3\u30EB\u30C9 \u6642\u523B\: {0}
-about.dialog.power_folder.max=\u6700\u5927\u30E1\u30E2\u30EA\: {0}MB
-about.dialog.power_folder.text=\u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
-about.dialog.power_folder.used=\u4F7F\u7528\u30E1\u30E2\u30EA\: {0}MB
+about_dialog.contributers=\u5354\u529B
+about_dialog.documentation=\u4F7F\u7528\u8AAC\u660E
+about_dialog.general_information=\u5168\u822C\u60C5\u5831
+about_dialog.home_page=\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8
+about_dialog.power_folder.build_date=\u30D3\u30EB\u30C9 \u65E5\u4ED8\: {0}
+about_dialog.power_folder.build_time=\u30D3\u30EB\u30C9 \u6642\u523B\: {0}
+about_dialog.power_folder.max=\u6700\u5927\u30E1\u30E2\u30EA\: {0}MB
+about_dialog.power_folder.text=\u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
+about_dialog.power_folder.used=\u4F7F\u7528\u30E1\u30E2\u30EA\: {0}MB
 about.dialog.send_bug_report=\u30D0\u30B0\u5831\u544A(B)
 about.dialog.send_bug_report.key=B
-about.dialog.support=\u30B5\u30DD\u30FC\u30C8
-about.dialog.sync_your_world=\u3042\u306A\u305F\u306E\u4E16\u754C\u3092\u540C\u671F\u3055\u305B\u307E\u3057\u3087\u3046
-about.dialog.team=\u30C1\u30FC\u30E0
+about_dialog.support=\u30B5\u30DD\u30FC\u30C8
+about_dialog.sync_your_world=\u3042\u306A\u305F\u306E\u4E16\u754C\u3092\u540C\u671F\u3055\u305B\u307E\u3057\u3087\u3046
+about_dialog.team=\u30C1\u30FC\u30E0
 about.dialog.testers=\u52D5\u4F5C\u8A66\u9A13
-about.dialog.title=PowerFolder \u306B\u3064\u3044\u3066
-about.dialog.translators=\u7FFB\u8A33
-about.dialog.your_system.java_version=Java \u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=\u753B\u9762\: {0}x{1}
-about.dialog.your_system.title=\u30B7\u30B9\u30C6\u30E0
+about_dialog.title=PowerFolder \u306B\u3064\u3044\u3066
+about_dialog.translators=\u7FFB\u8A33
+about_dialog.your_system.java_version=Java \u30D0\u30FC\u30B8\u30E7\u30F3\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=\u753B\u9762\: {0}x{1}
+about_dialog.your_system.title=\u30B7\u30B9\u30C6\u30E0
 about.dialog_about_tab=\u60C5\u5831
 about.dialog_contributers_tab=\u30C1\u30FC\u30E0
 
