--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Breek transfer af
 about.description=Toont informatie over PowerFolder
 about.dialog.check_for_updates=Zoek naar updates
 about.dialog.check_for_updates.key=Z
-about.dialog.contributers=Medewerkers
-about.dialog.documentation=Documentatie
-about.dialog.general_information=Algemene Informatie
-about.dialog.home_page=Homepage
-about.dialog.power_folder.build_date=Gemaakt op\: {0}
-about.dialog.power_folder.build_time=om\: {0}
+about_dialog.contributers=Medewerkers
+about_dialog.documentation=Documentatie
+about_dialog.general_information=Algemene Informatie
+about_dialog.home_page=Homepage
+about_dialog.power_folder.build_date=Gemaakt op\: {0}
+about_dialog.power_folder.build_time=om\: {0}
 ##about.dialog.power_folder.max=Max memory\: {0}MB
-about.dialog.power_folder.text=Versie\: {0}
+about_dialog.power_folder.text=Versie\: {0}
 ##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.send_bug_report=Verzend debug verslag
 ##about.dialog.send_bug_report.key=B
-about.dialog.support=Ondersteuning
+about_dialog.support=Ondersteuning
 ##about.dialog.sync_your_world=Sync your World
-about.dialog.team=Team
+about_dialog.team=Team
 about.dialog.testers=Testers
-about.dialog.title=Over PowerFolder
-about.dialog.translators=Vertalers
-about.dialog.your_system.java_version=Java versie\: {0}
-about.dialog.your_system.os=BS\: {0}
-about.dialog.your_system.screen=Scherm\: {0}x{1}
-about.dialog.your_system.title=Uw systeem
+about_dialog.title=Over PowerFolder
+about_dialog.translators=Vertalers
+about_dialog.your_system.java_version=Java versie\: {0}
+about_dialog.your_system.os=BS\: {0}
+about_dialog.your_system.screen=Scherm\: {0}x{1}
+about_dialog.your_system.title=Uw systeem
 about.dialog_about_tab=Over
 about.dialog_contributers_tab=Team
 
