--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Anuluj transfer
 about.description=Informacje o PowerFolder
 about.dialog.check_for_updates=Sprawd\u017a aktualizacje
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Wsp\u00f3\u0142tw\u00f3rcy
-about.dialog.documentation=Dokumentacja
-about.dialog.general_information=Og\u00f3lne Informacje
-about.dialog.home_page=Strona Domowa
-about.dialog.power_folder.build_date=Data kompilacji\: {0}
-about.dialog.power_folder.build_time=Godzina kompilacji\: {0}
-about.dialog.power_folder.max=Dost\u0119pna pami\u0119\u0107\: {0}MB
-about.dialog.power_folder.text=Wersja\: {0}
-about.dialog.power_folder.used=U\u017cyta pami\u0119\u0107\: {0}MB
+about_dialog.contributers=Wsp\u00f3\u0142tw\u00f3rcy
+about_dialog.documentation=Dokumentacja
+about_dialog.general_information=Og\u00f3lne Informacje
+about_dialog.home_page=Strona Domowa
+about_dialog.power_folder.build_date=Data kompilacji\: {0}
+about_dialog.power_folder.build_time=Godzina kompilacji\: {0}
+about_dialog.power_folder.max=Dost\u0119pna pami\u0119\u0107\: {0}MB
+about_dialog.power_folder.text=Wersja\: {0}
+about_dialog.power_folder.used=U\u017cyta pami\u0119\u0107\: {0}MB
 about.dialog.send_bug_report=Wy\u015blij raport o b\u0142\u0119dzie
 about.dialog.send_bug_report.key=B
-about.dialog.support=Wsparcie Techniczne
+about_dialog.support=Wsparcie Techniczne
 ##about.dialog.sync_your_world=Sync your World
-about.dialog.team=Team
+about_dialog.team=Team
 about.dialog.testers=Testerzy
-about.dialog.title=O Programie PowerFolder
-about.dialog.translators=T\u0142umaczenia
-about.dialog.your_system.java_version=Wersja Javy\: {0}
-about.dialog.your_system.os=System Operacyjny\: {0}
-about.dialog.your_system.screen=Ekran\: {0}x{1}
-about.dialog.your_system.title=Tw\u00f3j System
+about_dialog.title=O Programie PowerFolder
+about_dialog.translators=T\u0142umaczenia
+about_dialog.your_system.java_version=Wersja Javy\: {0}
+about_dialog.your_system.os=System Operacyjny\: {0}
+about_dialog.your_system.screen=Ekran\: {0}x{1}
+about_dialog.your_system.title=Tw\u00f3j System
 about.dialog_about_tab=O programie
 about.dialog_contributers_tab=Team
 
