--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Cancelar Transfer\u00eancia(s)
 about.description=Mostra informa\u00e7\u00e3o sobre PowerFolder
 about.dialog.check_for_updates=Verificar Atualiza\u00e7\u00f5es
 about.dialog.check_for_updates.key=V
-about.dialog.contributers=Colaboradores
-about.dialog.documentation=Documenta\u00e7\u00e3o
-about.dialog.general_information=Informa\u00e7\u00f5es gerais
-about.dialog.home_page=Homepage
+about_dialog.contributers=Colaboradores
+about_dialog.documentation=Documenta\u00e7\u00e3o
+about_dialog.general_information=Informa\u00e7\u00f5es gerais
+about_dialog.home_page=Homepage
 about.dialog.professional_folder_sharing_tool=Sincronize, acesse, compartilhe e fa\u00e7a backup\nfac\u00edlmente
 about.dialog.send_bug_report=Enviar Relat\u00f3rio de Erros
 about.dialog.send_bug_report.key=E
-about.dialog.support=Suporte
-about.dialog.team=Equipe
+about_dialog.support=Suporte
+about_dialog.team=Equipe
 about.dialog.testers=Testadores
-about.dialog.title=Sobre PowerFolder
-about.dialog.translators=Tradutores
+about_dialog.title=Sobre PowerFolder
+about_dialog.translators=Tradutores
 about.dialog.version.builddate=Data do Build\: {0}
 about.dialog.version.buildtime=Hor\u00e1rio do Build\: {0}
 about.dialog.version.text=Vers\u00e3o\: {0}
 about.dialog.version.title=Vers\u00e3o
-about.dialog.your_system.java_version=Vers\u00e3o do Java\: {0}
+about_dialog.your_system.java_version=Vers\u00e3o do Java\: {0}
 about.dialog.your_system.max=Mem\u00f3ria M\u00e1xima\: {0}MB
-about.dialog.your_system.os=SO\: {0}
-about.dialog.your_system.screen=Resolu\u00e7\u00e3o do Monitor\: {0}x{1}
-about.dialog.your_system.title=Seu Sistema
+about_dialog.your_system.os=SO\: {0}
+about_dialog.your_system.screen=Resolu\u00e7\u00e3o do Monitor\: {0}x{1}
+about_dialog.your_system.title=Seu Sistema
 about.dialog.your_system.used=Mem\u00f3ria Utilizada\: {0}MB
 about.dialog_about_tab=sobre
 about.dialog_contributers_tab=equipe
