--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -34,27 +34,27 @@ abort_transfer.name=Avbryt \u00f6verf\u00f6ring(ar)
 about.description=Visar information om PowerFolder
 about.dialog.check_for_updates=S\u00f6k efter uppdateringar
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Medverkande
-about.dialog.documentation=Dokumentation
-about.dialog.general_information=Allm\u00e4n information
-about.dialog.home_page=Hemsida
-about.dialog.power_folder.build_date=Skapad datum\: {0}
-about.dialog.power_folder.build_time=Skapad kl\: {0}
+about_dialog.contributers=Medverkande
+about_dialog.documentation=Dokumentation
+about_dialog.general_information=Allm\u00e4n information
+about_dialog.home_page=Hemsida
+about_dialog.power_folder.build_date=Skapad datum\: {0}
+about_dialog.power_folder.build_time=Skapad kl\: {0}
 ##about.dialog.power_folder.max=Max memory\: {0}MB
-about.dialog.power_folder.text=Version\: {0}
+about_dialog.power_folder.text=Version\: {0}
 ##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.send_bug_report=Skicka felrapport
 ##about.dialog.send_bug_report.key=B
-about.dialog.support=Support
+about_dialog.support=Support
 ##about.dialog.sync_your_world=Sync your World
-about.dialog.team=Team
+about_dialog.team=Team
 about.dialog.testers=Testare
-about.dialog.title=Om PowerFolder
-about.dialog.translators=\u00d6vers\u00e4ttare
-about.dialog.your_system.java_version=Java Version\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Bildsk\u00e4rm\: {0}x{1}
-about.dialog.your_system.title=Ditt system
+about_dialog.title=Om PowerFolder
+about_dialog.translators=\u00d6vers\u00e4ttare
+about_dialog.your_system.java_version=Java Version\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Bildsk\u00e4rm\: {0}x{1}
+about_dialog.your_system.title=Ditt system
 about.dialog_about_tab=om
 about.dialog_contributers_tab=team
 
