--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -34,27 +34,27 @@ abort_transfer.name=\u53d6\u6d88\u4f20\u8f93
 about.description=\u5173\u4e8ePowerFolder
 about.dialog.check_for_updates=\u68c0\u67e5\u66f4\u65b0
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=\u8d21\u732e\u8005
-about.dialog.documentation=\u6587\u6863
-about.dialog.general_information=\u901a\u7528\u4fe1\u606f
-about.dialog.home_page=\u9996\u9875
-about.dialog.power_folder.build_date=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
-about.dialog.power_folder.build_time=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
-about.dialog.power_folder.max=\u6700\u5927\u5185\u5b58\: {0}MB
-about.dialog.power_folder.text=\u7248\u672c\uff1a{0}
-about.dialog.power_folder.used=\u5df2\u7528\u5185\u5b58\: {0}MB
+about_dialog.contributers=\u8d21\u732e\u8005
+about_dialog.documentation=\u6587\u6863
+about_dialog.general_information=\u901a\u7528\u4fe1\u606f
+about_dialog.home_page=\u9996\u9875
+about_dialog.power_folder.build_date=\u7f16\u8bd1\u65e5\u671f\uff1a {0}
+about_dialog.power_folder.build_time=\u7f16\u8bd1\u65f6\u95f4\uff1a {0}
+about_dialog.power_folder.max=\u6700\u5927\u5185\u5b58\: {0}MB
+about_dialog.power_folder.text=\u7248\u672c\uff1a{0}
+about_dialog.power_folder.used=\u5df2\u7528\u5185\u5b58\: {0}MB
 about.dialog.send_bug_report=\u53d1\u9001\u9519\u8bef\u62a5\u544a
 about.dialog.send_bug_report.key=B
-about.dialog.support=\u652f\u6301
-about.dialog.sync_your_world=\u540c\u6b65\u4f60\u7684\u4e16\u754c
-about.dialog.team=\u5f00\u53d1\u56e2\u961f
+about_dialog.support=\u652f\u6301
+about_dialog.sync_your_world=\u540c\u6b65\u4f60\u7684\u4e16\u754c
+about_dialog.team=\u5f00\u53d1\u56e2\u961f
 about.dialog.testers=\u6d4b\u8bd5\u4eba\u5458
-about.dialog.title=\u5173\u4e8ePowerFolder
-about.dialog.translators=\u7ffb\u8bd1\u4eba\u5458
-about.dialog.your_system.java_version=Java\u7248\u672c\uff1a {0}
-about.dialog.your_system.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a{0}
-about.dialog.your_system.screen=\u5206\u8fa8\u7387\uff1a {0}x{1}
-about.dialog.your_system.title=\u5f53\u524d\u7cfb\u7edf
+about_dialog.title=\u5173\u4e8ePowerFolder
+about_dialog.translators=\u7ffb\u8bd1\u4eba\u5458
+about_dialog.your_system.java_version=Java\u7248\u672c\uff1a {0}
+about_dialog.your_system.os=\u64cd\u4f5c\u7cfb\u7edf\uff1a{0}
+about_dialog.your_system.screen=\u5206\u8fa8\u7387\uff1a {0}x{1}
+about_dialog.your_system.title=\u5f53\u524d\u7cfb\u7edf
 about.dialog_about_tab=\u5173\u4e8e
 about.dialog_contributers_tab=\u56e2\u961f
 
