--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -34,27 +34,27 @@ abort_transfer.name=\u0625\u0644\u063a\u0627\u0621 \u0627\u0644\u0646\u0642\u064
 about.description=\u0625\u0638\u0647\u0627\u0631 \u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0646 \u0628\u0631\u0646\u0627\u0645\u062c PowerFolder
 about.dialog.check_for_updates=\u0627\u0644\u062a\u062d\u0642\u0642 \u0645\u0646 \u0648\u062c\u0648\u062f \u062a\u062d\u062f\u064a\u062b\u0627\u062a \u0639\u0628\u0631 \u0627\u0644\u0627\u0646\u062a\u0631\u0646\u062a
 about.dialog.check_for_updates.key=\u0639
-about.dialog.contributers=\u0627\u0644\u0645\u0633\u0627\u0647\u0645\u0648\u0646
-about.dialog.documentation=\u0627\u0644\u062a\u0648\u062b\u064a\u0642
-about.dialog.general_information=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0627\u0645\u0629
-about.dialog.home_page=\u0627\u0644\u0635\u0641\u062d\u0629 \u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629
-about.dialog.power_folder.build_date=\u062a\u0627\u0631\u064a\u062e \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
-about.dialog.power_folder.build_time=\u0648\u0642\u062a \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
+about_dialog.contributers=\u0627\u0644\u0645\u0633\u0627\u0647\u0645\u0648\u0646
+about_dialog.documentation=\u0627\u0644\u062a\u0648\u062b\u064a\u0642
+about_dialog.general_information=\u0645\u0639\u0644\u0648\u0645\u0627\u062a \u0639\u0627\u0645\u0629
+about_dialog.home_page=\u0627\u0644\u0635\u0641\u062d\u0629 \u0627\u0644\u0631\u0626\u064a\u0633\u064a\u0629
+about_dialog.power_folder.build_date=\u062a\u0627\u0631\u064a\u062e \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
+about_dialog.power_folder.build_time=\u0648\u0642\u062a \u0627\u0644\u0628\u0646\u0627\u0621\: {0}
 ##about.dialog.power_folder.max=Max memory\: {0}MB
-about.dialog.power_folder.text=\u0627\u0644\u0646\u0633\u062e\u0629\: {0}
+about_dialog.power_folder.text=\u0627\u0644\u0646\u0633\u062e\u0629\: {0}
 ##about.dialog.power_folder.used=Used memory\: {0}MB
 about.dialog.send_bug_report=\u0625\u0631\u0633\u0627\u0644 \u062a\u0642\u0631\u064a\u0631 \u0628\u062e\u0637\u0623
 ##about.dialog.send_bug_report.key=B
-about.dialog.support=\u0627\u0644\u062f\u0639\u0645
+about_dialog.support=\u0627\u0644\u062f\u0639\u0645
 ##about.dialog.sync_your_world=Sync your World
-about.dialog.team=\u0627\u0644\u0641\u0631\u064a\u0642
+about_dialog.team=\u0627\u0644\u0641\u0631\u064a\u0642
 about.dialog.testers=\u0627\u0644\u0645\u062e\u062a\u0628\u0631\u0648\u0646
-about.dialog.title=\u0639\u0646 PowerFolder
-about.dialog.translators=\u0627\u0644\u0645\u062a\u0631\u062c\u0645\u0648\u0646
-about.dialog.your_system.java_version=\u0646\u0633\u062e\u0629 \u0627\u0644\u062c\u0627\u0641\u0627\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=\u0627\u0644\u0634\u0627\u0634\u0629\: {0}x{1}
-about.dialog.your_system.title=\u0646\u0638\u0627\u0645\u0643
+about_dialog.title=\u0639\u0646 PowerFolder
+about_dialog.translators=\u0627\u0644\u0645\u062a\u0631\u062c\u0645\u0648\u0646
+about_dialog.your_system.java_version=\u0646\u0633\u062e\u0629 \u0627\u0644\u062c\u0627\u0641\u0627\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=\u0627\u0644\u0634\u0627\u0634\u0629\: {0}x{1}
+about_dialog.your_system.title=\u0646\u0638\u0627\u0645\u0643
 about.dialog_about_tab=\u0639\u0646
 about.dialog_contributers_tab=\u0627\u0644\u0641\u0631\u064a\u0642
 
