--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -46,27 +46,27 @@ abort_transfer.name=Abort Transfer(s)
 about.description=Shows information about PowerFolder
 about.dialog.check_for_updates=Check For Updates
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=Contributors
-about.dialog.documentation=Documentation
-about.dialog.general_information=General Information
-about.dialog.home_page=Homepage
-about.dialog.sync_your_world=Sync your World
+about_dialog.contributers=Contributors
+about_dialog.documentation=Documentation
+about_dialog.general_information=General Information
+about_dialog.home_page=Homepage
+about_dialog.sync_your_world=Sync your World
 about.dialog.send_bug_report=Send Bug Report
 about.dialog.send_bug_report.key=B
-about.dialog.support=Support
-about.dialog.team=Team
+about_dialog.support=Support
+about_dialog.team=Team
 about.dialog.testers=Testers
-about.dialog.title=About PowerFolder
-about.dialog.translators=Translators
-about.dialog.power_folder.build_date=Build date\: {0}
-about.dialog.power_folder.build_time=Build time\: {0}
-about.dialog.power_folder.text=Version\: {0}
-about.dialog.power_folder.max=Max memory\: {0}MB
-about.dialog.power_folder.used=Used memory\: {0}MB
-about.dialog.your_system.java_version=Java version\: {0}
-about.dialog.your_system.os=OS\: {0}
-about.dialog.your_system.screen=Screen\: {0}x{1}
-about.dialog.your_system.title=Your System
+about_dialog.title=About PowerFolder
+about_dialog.translators=Translators
+about_dialog.power_folder.build_date=Build date\: {0}
+about_dialog.power_folder.build_time=Build time\: {0}
+about_dialog.power_folder.text=Version\: {0}
+about_dialog.power_folder.max=Max memory\: {0}MB
+about_dialog.power_folder.used=Used memory\: {0}MB
+about_dialog.your_system.java_version=Java version\: {0}
+about_dialog.your_system.os=OS\: {0}
+about_dialog.your_system.screen=Screen\: {0}x{1}
+about_dialog.your_system.title=Your System
 about.dialog_about_tab=about
 about.dialog_contributers_tab=team
 
