--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -34,27 +34,27 @@ abort_transfer.name=\u041F\u0440\u0435\u0440\u0432\u0430\u0442\u044C \u043F\u043
 about.description=\u041F\u043E\u043A\u0430\u0437\u044B\u0432\u0430\u0435\u0442 \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044E \u043E PowerFolder
 about.dialog.check_for_updates=\u041F\u0440\u043E\u0432\u0435\u0440\u0438\u0442\u044C \u043E\u0431\u043D\u043E\u0432\u043B\u0435\u043D\u0438\u044F
 about.dialog.check_for_updates.key=U
-about.dialog.contributers=\u0421\u043E\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044E\u0449\u0438\u0435
-about.dialog.documentation=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044F
-about.dialog.general_information=\u041E\u0441\u043D\u043E\u0432\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
-about.dialog.home_page=Homepage
-about.dialog.power_folder.build_date=\u0414\u0435\u043D\u044C \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
-about.dialog.power_folder.build_time=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
-about.dialog.power_folder.max=\u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
-about.dialog.power_folder.text=\u0412\u0435\u0440\u0438\u044F\: {0}
-about.dialog.power_folder.used=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u043C\u043E\u0439 \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
+about_dialog.contributers=\u0421\u043E\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044E\u0449\u0438\u0435
+about_dialog.documentation=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430\u0446\u0438\u044F
+about_dialog.general_information=\u041E\u0441\u043D\u043E\u0432\u043D\u0430\u044F \u0438\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F
+about_dialog.home_page=Homepage
+about_dialog.power_folder.build_date=\u0414\u0435\u043D\u044C \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
+about_dialog.power_folder.build_time=\u0412\u0440\u0435\u043C\u044F \u0432\u044B\u043F\u0443\u0441\u043A\u0430\: {0}
+about_dialog.power_folder.max=\u041C\u0430\u043A\u0441\u0438\u043C\u0430\u043B\u044C\u043D\u043E \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
+about_dialog.power_folder.text=\u0412\u0435\u0440\u0438\u044F\: {0}
+about_dialog.power_folder.used=\u0418\u0441\u043F\u043E\u043B\u044C\u0437\u0443\u0435\u043C\u043E\u0439 \u043F\u0430\u043C\u044F\u0442\u0438\: {0}\u041C\u0411
 about.dialog.send_bug_report=\u041F\u043E\u0441\u043B\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442 \u043E\u0431 \u043E\u0448\u0438\u0431\u043A\u0435
 about.dialog.send_bug_report.key=B
-about.dialog.support=\u041F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u0430
-about.dialog.sync_your_world=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u0439 \u041C\u0438\u0440
-about.dialog.team=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u0438
+about_dialog.support=\u041F\u043E\u0434\u0434\u0435\u0440\u0436\u043A\u0430
+about_dialog.sync_your_world=\u0421\u0438\u043D\u0445\u0440\u043E\u043D\u0438\u0437\u0438\u0440\u0443\u0439 \u041C\u0438\u0440
+about_dialog.team=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u0438
 about.dialog.testers=\u0422\u0435\u0441\u0442\u0435\u0440\u044B
-about.dialog.title=\u041E PowerFolder
-about.dialog.translators=\u041F\u0435\u0440\u0435\u0432\u043E\u0434\u0447\u0438\u043A\u0438
-about.dialog.your_system.java_version=\u0412\u0435\u0440\u0441\u0438\u044F Java \: {0}
-about.dialog.your_system.os=\u041E\u0421\: {0}
-about.dialog.your_system.screen=\u0414\u0438\u0441\u043F\u043B\u0435\u0439\: {0}x{1}
-about.dialog.your_system.title=\u0412\u0430\u0448\u0430 \u0421\u0438\u0441\u0442\u0435\u043C\u0430
+about_dialog.title=\u041E PowerFolder
+about_dialog.translators=\u041F\u0435\u0440\u0435\u0432\u043E\u0434\u0447\u0438\u043A\u0438
+about_dialog.your_system.java_version=\u0412\u0435\u0440\u0441\u0438\u044F Java \: {0}
+about_dialog.your_system.os=\u041E\u0421\: {0}
+about_dialog.your_system.screen=\u0414\u0438\u0441\u043F\u043B\u0435\u0439\: {0}x{1}
+about_dialog.your_system.title=\u0412\u0430\u0448\u0430 \u0421\u0438\u0441\u0442\u0435\u043C\u0430
 about.dialog_about_tab=\u0418\u043D\u0444\u043E
 about.dialog_contributers_tab=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u0438
 
