#278 - tidy base translations

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1219,8 +1219,8 @@ systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Freunde
-title.my.folders=Meine PowerFolder
-title.network.statistics=Netzwerk Statistiken
+my.folders.title=Meine PowerFolder
+network.statistics.title=Netzwerk Statistiken
 title.preview.folders=Vorschau
 title.public.folder=\u00d6ffentlicher Folder
 title.public.folders=\u00d6ffentliche Folder
