--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1104,8 +1104,8 @@ systray.tooltip.up=Up {0} KBs
 systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Friends
-title.my.folders=My PowerFolders
-title.network.statistics=Network Statistics
+my.folders.title=My PowerFolders
+network.statistics.title=Network Statistics
 title.preview.folders=Preview Folders
 title.public.folder=Public Folder
 title.public.folders=Public Folders
