--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1155,8 +1155,8 @@ systray.tooltip.up=Subida {0} KBs
 systray.tooltip.up.mb=Subida {0} MBs
 
 title.friends=Amigos
-title.my.folders=Mis PowerFolders
-title.network.statistics=Estad\u00EDsticas de la Red
+my.folders.title=Mis PowerFolders
+network.statistics.title=Estad\u00EDsticas de la Red
 title.preview.folders=Carpetas de Previsualizaci\u00F3n
 title.public.folder=Carpeta p\u00FAblica
 title.public.folders=Carpetas p\u00FAblicas
