--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1158,8 +1158,8 @@ systray.tooltip.up=UP {0} Kos
 systray.tooltip.up.mb=Up {0} Mos
 
 title.friends=Liste d'ami(e)s
-title.my.folders=Mon PowerFolder
-title.network.statistics=Statistiques r\u00E9seau
+my.folders.title=Mon PowerFolder
+network.statistics.title=Statistiques r\u00E9seau
 title.preview.folders=Dossiers de pr\u00E9visualisation
 title.public.folder=Dossier public
 title.public.folders=Dossiers publics
