--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -1156,8 +1156,8 @@ systray.tooltip.up=UP {0} KBs
 systray.tooltip.up.mb=UP {0} MBs
 
 title.friends=Amici
-title.my.folders=I Miei PowerFolders
-title.network.statistics=Statistiche Network
+my.folders.title=I Miei PowerFolders
+network.statistics.title=Statistiche Network
 title.preview.folders=Cartelle di anteprima
 title.public.folder=Cartella pubblica
 title.public.folders=Cartelle pubbliche
