--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1157,7 +1157,7 @@ systray.tooltip.up.mb=Up {0} MBs
 
 title.friends=Vrienden
 ##title.my.folders=My PowerFolders
-title.network.statistics=Netwerk Statistieken
+network.statistics.title=Netwerk Statistieken
 ##title.preview.folders=Preview Folders
 title.public.folder=Publieke Folder
 title.public.folders=Publieke Folders
