--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1157,7 +1157,7 @@ systray.tooltip.up.mb=Wysy\u0142anie {0} MBs
 
 title.friends=Znajomi
 ##title.my.folders=My PowerFolders
-title.network.statistics=Statystyki Sieci
+network.statistics.title=Statystyki Sieci
 ##title.preview.folders=Preview Folders
 title.public.folder=Publiczny Folder
 title.public.folders=Publiczne Foldery
