--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1006,8 +1006,8 @@ systray.tooltip.up=Carregado {0} KBs
 systray.tooltip.up.mb=Carregado {0} MBs
 
 title.friends=Amigos
-title.my.folders=Minhas pastas PowerFolder
-title.network.statistics=Estat\u00edsticas da Rede
+my.folders.title=Minhas pastas PowerFolder
+network.statistics.title=Estat\u00edsticas da Rede
 title.preview.folders=Pastas de Pr\u00e9-Visualiza\u00e7\u00e3o
 title.public.folder=Pasta P\u00fablica
 title.public.folders=Pastas P\u00fablicas
