--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1157,7 +1157,7 @@ systray.tooltip.up.mb=Upp {0} MBs
 
 title.friends=V\u00e4nner
 ##title.my.folders=My PowerFolders
-title.network.statistics=N\u00e4tverk statistik
+network.statistics.title=N\u00e4tverk statistik
 ##title.preview.folders=Preview Folders
 title.public.folder=Offentlig folder
 title.public.folders=Offentliga Foldrar
