--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1155,8 +1155,8 @@ systray.tooltip.up=\u4e0a\u4f20\u901f\u5ea6 {0} KBs
 systray.tooltip.up.mb=\u4e0a\u4f20 {0} MBs
 
 title.friends=\u597d\u53cb
-title.my.folders=\u6211\u7684PowerFolder
-title.network.statistics=\u7f51\u7edc\u7edf\u8ba1
+my.folders.title=\u6211\u7684PowerFolder
+network.statistics.title=\u7f51\u7edc\u7edf\u8ba1
 title.preview.folders=\u9884\u89c8\u6587\u4ef6\u5939
 title.public.folder=\u516c\u5171\u6587\u4ef6\u5939
 title.public.folders=\u516c\u5171\u6587\u4ef6\u5939
