--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1157,7 +1157,7 @@ systray.tooltip.up.mb=\u0631\u0641\u0639 {0} MBs
 
 title.friends=\u0623\u0635\u062f\u0642\u0627\u0621
 ##title.my.folders=My PowerFolders
-title.network.statistics=\u0625\u062d\u0635\u0627\u0626\u064a\u0627\u062a \u0627\u0644\u0634\u0628\u0643\u0629
+network.statistics.title=\u0625\u062d\u0635\u0627\u0626\u064a\u0627\u062a \u0627\u0644\u0634\u0628\u0643\u0629
 ##title.preview.folders=Preview Folders
 title.public.folder=\u0645\u062c\u0644\u062f\u0627\u062a \u0639\u0627\u0645\u0629
 title.public.folders=\u0645\u062c\u0644\u062f\u0627\u062a \u0639\u0627\u0645\u0629
