--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -1153,8 +1153,8 @@ systray.tooltip.up=\u9001\u4FE1 {0} KBs
 systray.tooltip.up.mb=\u53D7\u4FE1 {0} MBs
 
 title.friends=\u53CB\u4EBA
-title.my.folders=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0
-title.network.statistics=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u306E\u7D71\u8A08
+my.folders.title=\u30DE\u30A4 \u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0
+network.statistics.title=\u30CD\u30C3\u30C8\u30EF\u30FC\u30AF\u306E\u7D71\u8A08
 title.preview.folders=\u30D5\u30A9\u30EB\u30C0\u306E\u30D7\u30EC\u30D3\u30E5\u30FC
 title.public.folder=\u30D1\u30D6\u30EA\u30C3\u30AF \u30D5\u30A9\u30EB\u30C0
 title.public.folders=\u30D1\u30D6\u30EA\u30C3\u30AF \u30D5\u30A9\u30EB\u30C0
