--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -1156,8 +1156,8 @@ systray.tooltip.up=\u0417\u0430\u0433\u0440 {0} \u041A\u0431/\u0441
 systray.tooltip.up.mb=\u0417\u0430\u0433\u0440 {0} \u041C\u0411
 
 title.friends=\u0414\u0440\u0443\u0437\u044C\u044F
-title.my.folders=\u041C\u043E\u0438 \u043F\u0430\u043F\u043A\u0438 PowerFolder
-title.network.statistics=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0421\u0435\u0442\u0438
+my.folders.title=\u041C\u043E\u0438 \u043F\u0430\u043F\u043A\u0438 PowerFolder
+network.statistics.title=\u0421\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043A\u0430 \u0421\u0435\u0442\u0438
 title.preview.folders=\u041F\u0430\u043F\u043A\u0438 \u043F\u0440\u043E\u0441\u043C\u043E\u0442\u0440\u0430
 title.public.folder=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u0430\u044F \u041F\u0430\u043F\u043A\u0430
 title.public.folders=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u041F\u0430\u043F\u043A\u0438
