refs #1321 Generic setup of HTTP proxy

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -19,6 +19,7 @@
 # http://www.powerfolder.com
 #
 
+general.proxy_settings=Proxy Einstellungen
 wizard.login_online_storage.remind_password=Passwort merken
 general.search=Suchen
 general.close=Schliessen
