--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1301,10 +1301,10 @@ wizard.basic_setup.private=LAN und Internet
 wizard.basic_setup.title=Basis Setup
 wizard.basic_setup.upload.text=Unbegrenzte Bandbreite kann zu einer hohe Auslastung der Internet Verbindung f\u00fchren.
 wizard.basic_setup.upload.title=Unbegrenzte Bandbreite
-wizard.choose_location.select=Verzeichnis ausw\u00e4hlen
-wizard.choose_disk_location.calculating_directory_size=Berechne Größe des Verzeichnis...
-wizard.choose_disk_location.directory_size=Verzeichnis Größe {0}
-wizard.choose_disk_location.select=Verzeichnisauswahl
+choose_disk_location_panel.select=Verzeichnis ausw\u00e4hlen
+choose_disk_location_panel.calculating_directory_size=Berechne Größe des Verzeichnis...
+choose_disk_location_panel.directory_size=Verzeichnis Größe {0}
+choose_disk_location_panel.select=Verzeichnisauswahl
 wizard.choose_disk_location.title=Festplatten Speicherort
 wizard.control.back=Zur\u00fcck
 wizard.control.back.description=Zum vorherigen Schritt
