--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -1188,10 +1188,10 @@ wizard.basic_setup.title=Basic Setup
 wizard.basic_setup.default_folder_name=Synchronised Files
 wizard.basic_setup.upload.text=Unlimited connection speed will allow an unlimited number of connections.
 wizard.basic_setup.upload.title=Unlimited connection speed
-wizard.choose_location.select=Please select the directory
-wizard.choose_disk_location.select=Select directory
-wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
-wizard.choose_disk_location.directory_size=Directory size {0}
+choose_disk_location_panel.select=Please select the directory
+choose_disk_location_panel.select=Select directory
+choose_disk_location_panel.calculating_directory_size=Calculating size of directory...
+choose_disk_location_panel.directory_size=Directory size {0}
 wizard.choose_disk_location.title=Disk location
 wizard.control.back=Back
 wizard.control.back.description=Go to previous wizard step
