--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -1074,9 +1074,9 @@ wizard.basic_setup.private=Rede Local e Internet
 wizard.basic_setup.title=Configura\u00e7\u00e3o b\u00e1sica
 wizard.basic_setup.upload.text=Velocidade ilimitada de conex\u00e3o permite um n\u00famero ilimitado de conex\u00f5es.
 wizard.basic_setup.upload.title=Velocidade ilimitada de conex\u00e3o
-wizard.choose_disk_location.select=Selecione diret\u00f3rio
+choose_disk_location_panel.select=Selecione diret\u00f3rio
 wizard.choose_disk_location.title=Localiza\u00e7\u00e3o do disco
-wizard.choose_location.select=Por favor selecione o diret\u00f3rio
+choose_disk_location_panel.select=Por favor selecione o diret\u00f3rio
 wizard.control.back=Voltar
 wizard.control.back.description=Voltar para o passo anterior
 wizard.control.cancel=Cancelar
