--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -1240,7 +1240,7 @@ wizard.basic_setup.title=Grundl\u00e4ggande inst\u00e4llningar
 ##wizard.choose_location.select=Please select the directory
 ##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
 ##wizard.choose_disk_location.directory_size=Directory size {0}
-wizard.choose_disk_location.select=V\u00e4lj mapp
+choose_disk_location_panel.select=V\u00e4lj mapp
 wizard.choose_disk_location.title=Plats p\u00e5 disk
 wizard.control.back=Tillbaka
 ##wizard.control.back.description=Go to previous wizard step
