--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -1240,7 +1240,7 @@ wizard.basic_setup.title=\u0627\u0644\u062a\u0643\u0648\u064a\u0646 \u0627\u0644
 ##wizard.choose_location.select=Please select the directory
 ##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
 ##wizard.choose_disk_location.directory_size=Directory size {0}
-wizard.choose_disk_location.select=\u0623\u062e\u062a\u0631 \u0645\u0633\u0627\u0631\u0627\u064b
+choose_disk_location_panel.select=\u0623\u062e\u062a\u0631 \u0645\u0633\u0627\u0631\u0627\u064b
 wizard.choose_disk_location.title=\u0645\u0648\u0642\u0639 \u0627\u0644\u0642\u0631\u0635
 wizard.control.back=\u0639\u0648\u062f\u0629
 ##wizard.control.back.description=Go to previous wizard step
