--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -1236,10 +1236,10 @@ wizard.basic_setup.private=LAN e Internet
 wizard.basic_setup.title=Configuraci\u00F3n B\u00E1sica
 wizard.basic_setup.upload.text=Velocidad de conneci\u00F3n ilimitada permitir\u00E1 un n\u00FAmero ilimitado de conecciones.
 wizard.basic_setup.upload.title=Velocidad de Conecci\u00F3n ilimitada
-wizard.choose_location.select=Favor de seleccionar un directorio
-wizard.choose_disk_location.calculating_directory_size=Calculando el tama\u00F1oo del directorio...
-wizard.choose_disk_location.directory_size=Tama\u00F1oo de directiorio {0}
-wizard.choose_disk_location.select=Seleccione el directorio
+choose_disk_location_panel.select=Favor de seleccionar un directorio
+choose_disk_location_panel.calculating_directory_size=Calculando el tama\u00F1oo del directorio...
+choose_disk_location_panel.directory_size=Tama\u00F1oo de directiorio {0}
+choose_disk_location_panel.select=Seleccione el directorio
 wizard.choose_disk_location.title=Ubicaci\u00F3n en el disco
 wizard.control.back=Atr\u00E1s
 wizard.control.back.description=Ir al paso previo del Asistente
