--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -1239,10 +1239,10 @@ wizard.basic_setup.private=LAN et Internet
 wizard.basic_setup.title=Configuration standard
 wizard.basic_setup.upload.text=Une vitesse de connexion illimit\u00E9e autorise un nombre illimit\u00E9 de connexions.
 wizard.basic_setup.upload.title=Vitesse de connexion illimit\u00E9e
-wizard.choose_location.select=Merci d'indiquer l'arborescence de dossier
-wizard.choose_disk_location.calculating_directory_size=Calcule de la taille du dossier...
-wizard.choose_disk_location.directory_size=Dossier de taille {0}
-wizard.choose_disk_location.select=S\u00E9lectionner le r\u00E9pertoire
+choose_disk_location_panel.select=Merci d'indiquer l'arborescence de dossier
+choose_disk_location_panel.calculating_directory_size=Calcule de la taille du dossier...
+choose_disk_location_panel.directory_size=Dossier de taille {0}
+choose_disk_location_panel.select=S\u00E9lectionner le r\u00E9pertoire
 wizard.choose_disk_location.title=Emplacement sur le disque
 wizard.control.back=Pr\u00E9c\u00E9dent
 wizard.control.back.description=Revenir \u00E0 l'\u00E9tape pr\u00E9c\u00E9dente
