--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -1240,7 +1240,7 @@ wizard.basic_setup.title=Basis Setup
 ##wizard.choose_location.select=Please select the directory
 ##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
 ##wizard.choose_disk_location.directory_size=Directory size {0}
-wizard.choose_disk_location.select=Selecteer map
+choose_disk_location_panel.select=Selecteer map
 wizard.choose_disk_location.title=Disk lokatie
 wizard.control.back=Vorige
 ##wizard.control.back.description=Go to previous wizard step
