--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -1240,7 +1240,7 @@ wizard.basic_setup.upload.title=Nieograniczona pr\u0119dko\u015b\u0107 po\u0142\
 ##wizard.choose_location.select=Please select the directory
 ##wizard.choose_disk_location.calculating_directory_size=Calculating size of directory...
 ##wizard.choose_disk_location.directory_size=Directory size {0}
-wizard.choose_disk_location.select=Wybierz folder
+choose_disk_location_panel.select=Wybierz folder
 wizard.choose_disk_location.title=Miejsce na dysku
 wizard.control.back=Wstecz
 wizard.control.back.description=Przejd\u017a do poprzedniego kroku kreatora
