--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -1236,10 +1236,10 @@ wizard.basic_setup.private=\u5c40\u57df\u7f51\u548c\u4e92\u8054\u7f51
 wizard.basic_setup.title=\u57fa\u672c\u8bbe\u7f6e
 wizard.basic_setup.upload.text=\u65e0\u9650\u5236\u8fde\u63a5\u5c06\u5141\u8bb8\u65e0\u9650\u91cf\u7684\u8fde\u63a5\u6570\u3002
 wizard.basic_setup.upload.title=\u65e0\u9650\u5236\u8fde\u63a5
-wizard.choose_location.select=\u8bf7\u9009\u62e9\u76ee\u5f55
-wizard.choose_disk_location.calculating_directory_size=\u6b63\u5728\u8ba1\u7b97\u76ee\u5f55\u5927\u5c0f...
-wizard.choose_disk_location.directory_size=\u76ee\u5f55\u5927\u5c0f {0}
-wizard.choose_disk_location.select=\u9009\u62e9\u76ee\u5f55
+choose_disk_location_panel.select=\u8bf7\u9009\u62e9\u76ee\u5f55
+choose_disk_location_panel.calculating_directory_size=\u6b63\u5728\u8ba1\u7b97\u76ee\u5f55\u5927\u5c0f...
+choose_disk_location_panel.directory_size=\u76ee\u5f55\u5927\u5c0f {0}
+choose_disk_location_panel.select=\u9009\u62e9\u76ee\u5f55
 wizard.choose_disk_location.title=\u78c1\u76d8\u4f4d\u7f6e
 wizard.control.back=\u8fd4\u56de
 wizard.control.back.description=\u5230\u5411\u5bfc\u7684\u4e0a\u4e00\u6b65
