Fixed too long text problem

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -228,7 +228,7 @@ dialog.create_edit_profile.auto_download_from_friends=Auto-Download von Freunden
 dialog.create_edit_profile.auto_download_from_other=Auto-Download von Anderen
 dialog.create_edit_profile.cannot_save_name=Transfer Modus kann nicht gespeichert werden.\nTransfer Modus {0} existiert bereits
 dialog.create_edit_profile.cannot_save_profile=Transfer Modus kann nicht gespeichert werden.\nDieser ist identisch mit {0}
-dialog.create_edit_profile.change_detection_disabled=Änderungssuche im lokalen Verzeichnis abgeschaltet 
+dialog.create_edit_profile.change_detection_manual=Manuell 
 dialog.create_edit_profile.configure_from=Von einem bestehenden Transfer Modus kopieren
 dialog.create_edit_profile.create_button.description=Eigenen Transfer Modus konfigurieren
 dialog.create_edit_profile.create_button.key=N
